background-clip:text doesn't work with display:flex https://bugs.webkit.org/show_bug.cgi?id=169125 <rdar://problem/72432683>

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-backgrounds/background-clip/clip-text-flex-expected.html: Added.
* web-platform-tests/css/css-backgrounds/background-clip/clip-text-flex-ref.html: Added.
* web-platform-tests/css/css-backgrounds/background-clip/clip-text-flex.html: Added.

Source/WebCore:

Tests: imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-text-flex.html

* rendering/RenderElement.cpp:
(WebCore::RenderElement::paintAsInlineBlock):

Flexbox children paint as inline blocks. This path didn't support text clip paint phase.



Canonical link: https://commits.webkit.org/248442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291303 268f45cc-cd09-0410-ab3c-d52691b4dbfc